# cs143b-project1

./: .gitignore  CMakeLists.txt  README.md  a.out  output.txt  sample-input2.txt
143b-p1/x64/Debug/: 143b-p1.exe.recipe  vc145.idb
143b-p1/x64/Debug/143b-p1.tlog/: 143b-p1.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
includes/: helpers.h  operations.h  structures.h
src/: helpers.cpp  main.cpp  operations.cpp
